# codecrafters-claude-code-rust

./: .gitignore  Cargo.toml  README.md  sample.env  your_program.sh
.codecrafters/: run.sh
misc/: openai-model-list.py
src/: conversation.rs  lib.rs  main.rs  tools.rs
