[package]
name = "ccrc-code"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.92"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 }

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-openai = { version = "=0.32.4", features = ["byot", "chat-completion"] }
clap = { version = "4.3.14", features = ["derive"] } # CLI argument parsing
serde_json = "1.0.149"
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
